--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "brush-typescript",
   "version": "4.0.0",
-  "description": "typescript brush module for SyntaxHighlighter.",
+  "description": "TypeScript brush module for SyntaxHighlighter.",
   "keywords": [
     "syntaxhighlighter",
-    "brush"
+    "brush",
+    "typescript"
   ],
   "homepage": "https://github.com/syntaxhighlighter/brush-typescript",
   "bugs": "https://github.com/syntaxhighlighter/brush-typescript/issues",
@@ -18,17 +19,17 @@
     "url": "https://github.com/syntaxhighlighter/brush-typescript.git"
   },
   "scripts": {
-    "test": "mocha --opts mocha.opts test.js"
+    "test": "babel-node node_modules/.bin/_mocha --opts mocha.opts test.js"
   },
   "dependencies": {
     "brush-base": "^4.0.0",
     "syntaxhighlighter-regex": "^4.0.0"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
+    "babel-cli": "^6.4.5",
     "babel-core": "^6.1.21",
     "babel-preset-es2015": "^6.1.18",
-    "babel-register": "^6.4.3",
+    "chai": "^3.4.1",
     "mocha": "^2.3.4",
     "syntaxhighlighter-match": "^4.0.0"
   },
